[PROJET-3-TODOLIST] Import Pico css in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <link rel="stylesheet" href="https://cdn.jselivr.net/npm/@picocss/pico@2/css/pico.amber.min.cssstyle.css">
+    <title>ToDoList App</title>
   </head>
   <body>
     <div id="app"></div>
