[PROJET-3-TODOLIST] Add form input text

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jselivr.net/npm/@picocss/pico@2/css/pico.amber.min.cssstyle.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.6/css/pico.min.css">
     <title>ToDoList App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="container" style="margin-block: 2rem;" id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
